# http-server

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
public/: global.css  index.html  index.js  page.html
src/: fs.c  fs.h  http_thread.c  http_thread.h  main.c  str.c  str.h
src/http/: content-type.c  content-type.h  headers.c  headers.h  http.h  parser.c  parser.h  parser_helpers.c  parser_helpers.h  status.c  status.h
